--- a/package.json
+++ b/package.json
@@ -22,16 +22,22 @@
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
     "@types/jquery": "^3.2.12",
+    "angular-datatables": "^4.4.0",
+    "animate.css": "^3.5.2",
     "core-js": "^2.4.1",
+    "datatables.net": "^1.10.16",
+    "datatables.net-dt": "^1.10.16",
     "jquery": "^3.2.1",
     "materialize-css": "^0.100.2",
     "rxjs": "^5.4.2",
+    "sweetalert": "^2.0.3",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
     "@angular/cli": "1.3.0",
     "@angular/compiler-cli": "^4.2.4",
     "@angular/language-service": "^4.2.4",
+    "@types/datatables.net": "^1.10.6",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/jquery": "^3.2.12",
